tests/rosetta/out/cpp/abbreviations-simple.error
g++ error: exit status 1
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: In function ‘auto fields(std::string)’:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:16:24: error: no matching function for call to ‘std::vector<int>::push_back(std::__cxx11::basic_string<char>&)’
   16 |         words.push_back(cur);
      |         ~~~~~~~~~~~~~~~^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:5:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘std::__cxx11::basic_string<char>’ to ‘const std::vector<int>::value_type&’ {aka ‘const int&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘std::__cxx11::basic_string<char>’ to ‘std::vector<int>::value_type&&’ {aka ‘int&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:25:20: error: no matching function for call to ‘std::vector<int>::push_back(std::__cxx11::basic_string<char>&)’
   25 |     words.push_back(cur);
      |     ~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘std::__cxx11::basic_string<char>’ to ‘const std::vector<int>::value_type&’ {aka ‘const int&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘std::__cxx11::basic_string<char>’ to ‘std::vector<int>::value_type&&’ {aka ‘int&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: At global scope:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:40:18: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   40 | std::string join(auto xs, std::string sep) {
      |                  ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: In function ‘auto readTable(std::string)’:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:99:23: error: request for member ‘size’ in ‘cmd’, which is of non-class type ‘int’
   99 |     auto minlen = cmd.size();
      |                       ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:101:39: error: could not convert ‘toks.std::vector<int>::operator[](((std::vector<int>::size_type)i))’ from ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’} to ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’}
  101 |     if (((i < toks.size()) && isDigits(toks[i]))) {
      |                               ~~~~~~~~^~~~~~~~~
      |                                       |
      |                                       __gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type {aka int}
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:102:29: error: could not convert ‘toks.std::vector<int>::operator[](((std::vector<int>::size_type)i))’ from ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’} to ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’}
  102 |       auto num = parseIntStr(toks[i]);
      |                  ~~~~~~~~~~~^~~~~~~~~
      |                             |
      |                             __gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type {aka int}
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:103:37: error: request for member ‘size’ in ‘cmd’, which is of non-class type ‘int’
  103 |       if (((num >= 1) && (num < cmd.size()))) {
      |                                     ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: At global scope:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:115:15: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
  115 | auto validate(auto commands, auto mins, auto words) {
      |               ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:115:30: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
  115 | auto validate(auto commands, auto mins, auto words) {
      |                              ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:115:41: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
  115 | auto validate(auto commands, auto mins, auto words) {
      |                                         ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: In function ‘auto validate(auto:2, auto:3, auto:4)’:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:137:24: error: no matching function for call to ‘std::vector<int>::push_back(std::string)’
  137 |       results.push_back(std::string("*error*"));
      |       ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘const std::vector<int>::value_type&’ {aka ‘const int&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘std::vector<int>::value_type&&’ {aka ‘int&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: At global scope:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:144:1: error: ‘::main’ must return ‘int’
  144 | auto main() {
      | ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: In instantiation of ‘auto validate(auto:2, auto:3, auto:4) [with auto:2 = std::vector<int>; auto:3 = std::vector<int>; auto:4 = std::vector<int>]’:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:168:26:   required from here
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:121:19: error: request for member ‘size’ in ‘w’, which is of non-class type ‘int’
  121 |     auto wlen = w.size();
      |                 ~~^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:125:68: error: request for member ‘size’ in ‘cmd’, which is of non-class type ‘int’
  125 |       if ((((mins[ci] != 0) && (wlen >= mins[ci])) && (wlen <= cmd.size()))) {
      |                                                                ~~~~^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:126:23: error: ‘upper’ was not declared in this scope; did you mean ‘toupper’?
  126 |         auto c = upper(cmd);
      |                  ~~~~~^~~~~
      |                  toupper
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:127:24: error: ‘upper’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation
  127 |         auto ww = upper(w);
      |                   ~~~~~^~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:126:23: note: ‘upper’ declared here, later in the translation unit
  126 |         auto c = upper(cmd);
      |                  ~~~~~^~~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: In function ‘int main()’:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:174:52: error: request for member ‘size’ in ‘results.std::vector<int>::operator[](((std::vector<int>::size_type)k))’, which is of non-class type ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  174 |       out1 = (out1 + padRight(words[k], results[k].size()));
      |                                                    ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:20: error: no match for ‘operator+’ (operand types are ‘std::__cxx11::basic_string<char>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’})
  176 |       out1 = (out1 + words[k]);
In file included from /usr/include/c++/13/string:48,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_iterator.h:634:5: note: candidate: ‘template<class _Iterator> constexpr std::reverse_iterator<_Iterator> std::operator+(typename reverse_iterator<_Iterator>::difference_type, const reverse_iterator<_Iterator>&)’
  634 |     operator+(typename reverse_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note: candidate: ‘template<class _Iterator> constexpr std::move_iterator<_IteratorL> std::operator+(typename move_iterator<_IteratorL>::difference_type, const move_iterator<_IteratorL>&)’
 1808 |     operator+(typename move_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  176 |       out1 = (out1 + words[k]);
      |                             ^
In file included from /usr/include/c++/13/string:54:
/usr/include/c++/13/bits/basic_string.h:3553:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3553 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3571:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3571 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const _CharT*’ and ‘std::__cxx11::basic_string<char>’
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3590:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3590 |     operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Alloc>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3607:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3607 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const _CharT*’ and ‘int’
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3625:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 3625 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   deduced conflicting types for parameter ‘_CharT’ (‘char’ and ‘int’)
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3637:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3637 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3644:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3644 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3651:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3651 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3674:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3674 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const _CharT*’ and ‘std::__cxx11::basic_string<char>’
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3681:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3681 |     operator+(_CharT __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3688:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const _CharT*)’
 3688 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   mismatched types ‘const _CharT*’ and ‘int’
  176 |       out1 = (out1 + words[k]);
      |                             ^
/usr/include/c++/13/bits/basic_string.h:3695:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, _CharT)’
 3695 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:176:29: note:   deduced conflicting types for parameter ‘_CharT’ (‘char’ and ‘int’)
  176 |       out1 = (out1 + words[k]);
      |                             ^
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: At global scope:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:185:5: error: redefinition of ‘int main()’
  185 | int main() {
      |     ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:144:6: note: ‘int main()’ previously defined here
  144 | auto main() {
      |      ^~~~
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp: In instantiation of ‘std::string join(auto:1, std::string) [with auto:1 = std::vector<int>; std::string = std::__cxx11::basic_string<char>]’:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:181:51:   required from here
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: error: no match for ‘operator+’ (operand types are ‘std::__cxx11::basic_string<char>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’})
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note: candidate: ‘template<class _Iterator> constexpr std::reverse_iterator<_Iterator> std::operator+(typename reverse_iterator<_Iterator>::difference_type, const reverse_iterator<_Iterator>&)’
  634 |     operator+(typename reverse_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note: candidate: ‘template<class _Iterator> constexpr std::move_iterator<_IteratorL> std::operator+(typename move_iterator<_IteratorL>::difference_type, const move_iterator<_IteratorL>&)’
 1808 |     operator+(typename move_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3553 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3571 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const _CharT*’ and ‘std::__cxx11::basic_string<char>’
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3590 |     operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Alloc>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3607 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const _CharT*’ and ‘int’
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 3625 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   deduced conflicting types for parameter ‘_CharT’ (‘char’ and ‘int’)
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3637 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3644 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3651 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3674 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const _CharT*’ and ‘std::__cxx11::basic_string<char>’
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3681 |     operator+(_CharT __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘__gnu_cxx::__alloc_traits<std::allocator<int>, int>::value_type’ {aka ‘int’}
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const _CharT*)’
 3688 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   mismatched types ‘const _CharT*’ and ‘int’
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, _CharT)’
 3695 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note:   template argument deduction/substitution failed:
/tmp/TestMochiCPPGoldenabbreviations-simple2179921611/001/prog.cpp:47:16: note:   deduced conflicting types for parameter ‘_CharT’ (‘char’ and ‘int’)
   47 |     res = (res + xs[i]);
      |           ~~~~~^~~~~~~~
